<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbg"
    tools:context=".register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_onboard"
        android:textAlignment="center"
        android:textColor="#288347"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/lets_get_you_set_up"
        android:textColor="#D82F5A46"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/already_have_an_account"
        android:textColor="#D8000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#50C2C9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/already"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:autofillHints="no"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_your_full_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="#5C8064"
        android:textColorHint="#5C8064"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454"
        tools:ignore="RtlSymmetry,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:autofillHints="no"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="#5C8064"
        android:textColorHint="#5C8064"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:autofillHints="no"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#5C8064"
        android:textColorHint="#5C8064"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:autofillHints="no"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#5C8064"
        android:textColorHint="#5C8064"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <ImageButton
        android:id="@+id/signupbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.29"
        app:srcCompat="@drawable/greenbox"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/signupbt"
        app:layout_constraintEnd_toEndOf="@+id/signupbt"
        app:layout_constraintStart_toStartOf="@+id/signupbt"
        app:layout_constraintTop_toTopOf="@+id/signupbt" />
</androidx.constraintlayout.widget.ConstraintLayout>