<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/openingbg"
    tools:context=".opening">

    <TextView
        android:id="@+id/starttext"
        android:layout_width="364dp"
        android:layout_height="112dp"
        android:fontFamily="@font/poppins"
        android:lineSpacingExtra="1px"
        android:text="@string/split_bills_easily_with_expense_tracker"
        android:textAlignment="center"
        android:textColor="#E64F857B"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <ImageButton
        android:id="@+id/startbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="119dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starttext"
        app:layout_constraintVertical_bias="0.37"
        app:srcCompat="@drawable/greenbox"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/getstartedtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/get_started"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/startbt"
        app:layout_constraintEnd_toEndOf="@+id/startbt"
        app:layout_constraintStart_toStartOf="@+id/startbt"
        app:layout_constraintTop_toTopOf="@+id/startbt"
        app:layout_constraintVertical_bias="0.55" />
</androidx.constraintlayout.widget.ConstraintLayout>