<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbg"
    tools:context=".create_group">

    <EditText
        android:id="@+id/group_name"
        android:layout_width="283dp"
        android:layout_height="58dp"
        android:autofillHints="no"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/enter_group_name"
        android:inputType="textPersonName"
        android:textColor="#5C8064"
        android:textColorHint="#097E62"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/group_member_no"
        android:layout_width="283dp"
        android:layout_height="58dp"
        android:autofillHints="no"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/enter_number_of_n_participants"
        android:inputType="number"
        android:textColor="#5C8064"
        android:textColorHint="#097E62"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="268dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        app:srcCompat="@drawable/greenbox" />

    <TextView
        android:id="@+id/randomcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="Unique Group Code"
        android:textColor="#5C8064"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <ImageButton
        android:id="@+id/code_info_btn"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"
        app:srcCompat="@drawable/ic_info_code" />

    <ImageButton
        android:id="@+id/creategroup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:srcCompat="@drawable/green_box_lite" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:fontFamily="@font/poppins"
        android:textColor="#097E62"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/creategroup_btn"
        app:layout_constraintEnd_toEndOf="@+id/creategroup_btn"
        app:layout_constraintStart_toStartOf="@+id/creategroup_btn"
        app:layout_constraintTop_toTopOf="@+id/creategroup_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>